<resources>
    <string name="app_name">Aisle Hopper</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">My Lists</string>
    <string name="title_section3">My Stores</string>
    <string name="title_section4">Nearby Stores</string>
    <string name="title_section5">Settings</string>
    <string name="title_section6">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">MainPage</string>

    <string name="hello_world">Placeholder string.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help">Help</string>
    <string name="myListTextView">My Lists</string>
    <string name="myStoresTextView">My Stores</string>
    <string name="nearbyStoresTextView">Nearby Stores</string>
    <string name="title_activity_deleteme">deletemen</string>
    <string name="cancelButton">Cancel</string>
    <string name="submitButton">Create</string>
    <string name="newlistButton">Add New List</string>
    <string name="newlistBox">newListBox</string>
    <string name="cancel_choost_list">cancel_choose_list</string>
    <string name="cancel_choose_list">cancel_choose_list</string>
    <string name="Cancel">Cancel</string>
    <string name="searchButton">Find An Item</string>
    <string name="addNewListButton">Add New List</string>
    <string name="navigateAStore">Navigate A Store</string>
    <string name="deleteThisList">Delete This List</string>
    <string name="individual_store_search">Search This Store</string>
    <string name="individual_store_navigate">Navigate This Store</string>
    <string name="individual_store_favorite">Add To Favorites</string>
</resources>
